--- a/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
@@ -11,8 +11,9 @@
             <TableColumn fx:id="Customer_ID" minWidth="75.0" prefWidth="75.0" text="ID" />
           <TableColumn fx:id="Customer_Name" minWidth="100.0" prefWidth="75.0" text="Name" />
           <TableColumn fx:id="Address" minWidth="125.0" prefWidth="75.0" text="Address" />
-            <TableColumn fx:id="Postal_Code" minWidth="125.0" prefWidth="75.0" text="Postal Code" />
-            <TableColumn fx:id="Phone" minWidth="75.0" prefWidth="75.0" text="Phone" />
+            <TableColumn fx:id="Postal_Code" minWidth="82.0" prefWidth="82.0" text="Postal Code" />
+            <TableColumn fx:id="Phone" minWidth="75.0" prefWidth="133.0" text="Phone" />
+            <TableColumn fx:id="Division_ID" minWidth="75.0" prefWidth="99.0" text="Division_ID" />
         </columns>
       </TableView>
       <HBox alignment="CENTER" layoutX="351.0" layoutY="321.0" prefHeight="56.0" prefWidth="200.0" spacing="15.0">
