--- a/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
@@ -18,7 +18,7 @@
       </TableView>
       <HBox alignment="CENTER" layoutX="351.0" layoutY="321.0" prefHeight="56.0" prefWidth="200.0" spacing="15.0">
          <children>
-            <Button mnemonicParsing="false" text="ADD" />
+            <Button mnemonicParsing="false" onAction="#OnAddCustomer" text="ADD" />
             <Button mnemonicParsing="false" text="UPDATE" />
             <Button mnemonicParsing="false" text="DELETE" />
          </children>
