--- a/src/main/resources/cordinus/cordinus_global/ModCust.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ModCust.fxml
@@ -8,12 +8,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="774.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox layoutX="117.0" layoutY="81.0" prefHeight="406.0" prefWidth="533.0">
+      <VBox layoutX="125.0" layoutY="125.0" prefHeight="406.0" prefWidth="533.0">
          <children>
-            <GridPane>
+            <GridPane alignment="CENTER" layoutX="100.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -24,6 +23,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label text="Customer Name:" />
@@ -31,11 +31,13 @@
                   <Label layoutX="10.0" layoutY="47.0" text="Postal Code:" GridPane.rowIndex="2" />
                   <Label layoutX="10.0" layoutY="77.0" text="Phone Number:" GridPane.rowIndex="3" />
                   <Label layoutX="10.0" layoutY="17.0" text="Customer ID:" GridPane.rowIndex="4" />
-                  <TextField GridPane.columnIndex="1" />
-                  <TextField layoutX="277.0" layoutY="13.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField layoutX="277.0" layoutY="43.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField layoutX="277.0" layoutY="73.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField layoutX="277.0" layoutY="103.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <TextField fx:id="Customer_Name" GridPane.columnIndex="1" />
+                  <TextField fx:id="Address" layoutX="277.0" layoutY="13.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="Postal_Code" layoutX="277.0" layoutY="43.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="Phone" layoutX="277.0" layoutY="73.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField fx:id="Customer_ID" layoutX="277.0" layoutY="103.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label text="Division ID:" GridPane.rowIndex="5" />
+                  <TextField fx:id="Division_ID" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                </children>
             </GridPane>
          </children>
