--- a/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.appointment.ApptController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.appointment.ApptController">
    <children>
       <TableView fx:id="AppointmentTable" layoutX="143.0" layoutY="100.0" prefHeight="200.0" prefWidth="615.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Appt. ID" />
-          <TableColumn prefWidth="75.0" text="Title" />
-            <TableColumn prefWidth="75.0" text="Description" />
-            <TableColumn prefWidth="75.0" text="Location" />
-            <TableColumn prefWidth="75.0" text="Contact" />
-            <TableColumn prefWidth="75.0" text="Type" />
-            <TableColumn prefWidth="75.0" text="Start" />
-            <TableColumn prefWidth="75.0" text="End" />
+          <TableColumn fx:id="Appointment_ID" prefWidth="75.0" text="Appt. ID" />
+          <TableColumn fx:id="Title" prefWidth="75.0" text="Title" />
+            <TableColumn fx:id="Description" prefWidth="75.0" text="Description" />
+            <TableColumn fx:id="Location" prefWidth="75.0" text="Location" />
+            <TableColumn fx:id="Contact_ID" prefWidth="75.0" text="Contact" />
+            <TableColumn fx:id="Type" prefWidth="75.0" text="Type" />
+            <TableColumn fx:id="Start" prefWidth="75.0" text="Start" />
+            <TableColumn fx:id="End" prefWidth="75.0" text="End" />
         </columns>
       </TableView>
-      <HBox alignment="CENTER" layoutX="351.0" layoutY="321.0" prefHeight="56.0" prefWidth="200.0" spacing="15.0">
+      <HBox alignment="CENTER" layoutX="298.0" layoutY="323.0" prefHeight="56.0" prefWidth="306.0" spacing="15.0">
          <children>
-            <Button mnemonicParsing="false" text="ADD" />
-            <Button mnemonicParsing="false" text="UPDATE" />
-            <Button mnemonicParsing="false" text="DELETE" />
+            <Button mnemonicParsing="false" onAction="#OnAddAppt" prefHeight="25.0" prefWidth="62.0" text="ADD" />
+            <Button mnemonicParsing="false" onAction="#OnUpdateAppt" text="UPDATE" />
+            <Button mnemonicParsing="false" onAction="#OnDeleteAppt" text="DELETE" />
+            <Button layoutX="17.0" layoutY="26.0" mnemonicParsing="false" onAction="#MainMenuReturn" text="BACK" />
          </children>
       </HBox>
       <Label alignment="CENTER" layoutX="315.0" layoutY="13.0" prefHeight="56.0" prefWidth="251.0" text="APPOINTMENTS">
