--- a/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
@@ -16,11 +16,12 @@
             <TableColumn fx:id="Division_ID" minWidth="75.0" prefWidth="99.0" text="Division_ID" />
         </columns>
       </TableView>
-      <HBox alignment="CENTER" layoutX="351.0" layoutY="321.0" prefHeight="56.0" prefWidth="200.0" spacing="15.0">
+      <HBox alignment="CENTER" layoutX="300.0" layoutY="321.0" prefHeight="56.0" prefWidth="251.0" spacing="15.0">
          <children>
             <Button mnemonicParsing="false" onAction="#OnAddCustomer" text="ADD" />
             <Button mnemonicParsing="false" text="UPDATE" />
             <Button mnemonicParsing="false" text="DELETE" />
+            <Button mnemonicParsing="false" onAction="#MainMenuReturn" text="BACK" />
          </children>
       </HBox>
       <Label alignment="CENTER" layoutX="315.0" layoutY="13.0" prefHeight="56.0" prefWidth="251.0" text="CUSTOMERS">
