--- a/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
@@ -10,16 +10,16 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.appointment.ApptController">
    <children>
-      <TableView fx:id="AppointmentTable" layoutX="143.0" layoutY="100.0" prefHeight="200.0" prefWidth="615.0">
+      <TableView fx:id="AppointmentTable" layoutX="59.0" layoutY="100.0" prefHeight="200.0" prefWidth="749.0">
         <columns>
           <TableColumn fx:id="Appointment_ID" prefWidth="75.0" text="Appt. ID" />
           <TableColumn fx:id="Title" prefWidth="75.0" text="Title" />
             <TableColumn fx:id="Description" prefWidth="75.0" text="Description" />
             <TableColumn fx:id="Location" prefWidth="75.0" text="Location" />
             <TableColumn fx:id="Contact_ID" prefWidth="75.0" text="Contact" />
-            <TableColumn fx:id="Type" prefWidth="75.0" text="Type" />
-            <TableColumn fx:id="Start" prefWidth="75.0" text="Start" />
-            <TableColumn fx:id="End" prefWidth="75.0" text="End" />
+            <TableColumn fx:id="Type" prefWidth="113.0" text="Type" />
+            <TableColumn fx:id="Start" minWidth="8.0" prefWidth="128.0" text="Start" />
+            <TableColumn fx:id="End" prefWidth="132.0" text="End" />
         </columns>
       </TableView>
       <HBox alignment="CENTER" layoutX="298.0" layoutY="323.0" prefHeight="56.0" prefWidth="306.0" spacing="15.0">
