--- a/src/main/resources/cordinus/cordinus_global/AddCust.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AddCust.fxml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="774.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.AddCustController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="774.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.AddCustController">
    <children>
       <VBox layoutX="125.0" layoutY="125.0" prefHeight="406.0" prefWidth="533.0">
          <children>
@@ -28,23 +21,23 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Customer Name:" />
-                  <Label layoutX="10.0" layoutY="17.0" text="Address:" GridPane.rowIndex="1" />
-                  <Label layoutX="10.0" layoutY="47.0" text="Postal Code:" GridPane.rowIndex="2" />
-                  <Label layoutX="10.0" layoutY="77.0" text="Phone Number:" GridPane.rowIndex="3" />
-                  <Label layoutX="10.0" layoutY="17.0" text="Customer ID:" GridPane.rowIndex="4" />
+                  <Label fx:id="CustomerNameLbl" text="Customer Name:" />
+                  <Label fx:id="AddressLbl" layoutX="10.0" layoutY="17.0" text="Address:" GridPane.rowIndex="1" />
+                  <Label fx:id="PostalCodeLbl" layoutX="10.0" layoutY="47.0" text="Postal Code:" GridPane.rowIndex="2" />
+                  <Label fx:id="PhoneLbl" layoutX="10.0" layoutY="77.0" text="Phone Number:" GridPane.rowIndex="3" />
+                  <Label fx:id="CustomerID_Lbl" layoutX="10.0" layoutY="17.0" text="Customer ID:" GridPane.rowIndex="4" />
                   <TextField fx:id="Customer_Name" GridPane.columnIndex="1" />
-                  <TextField fx:id="Address" layoutX="277.0" layoutY="13.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="AddressTxt" layoutX="277.0" layoutY="13.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <TextField fx:id="Postal_Code" layoutX="277.0" layoutY="43.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <TextField fx:id="Phone" layoutX="277.0" layoutY="73.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <TextField fx:id="Customer_ID" layoutX="277.0" layoutY="103.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <Label text="Division ID:" GridPane.rowIndex="5" />
+                  <Label fx:id="DivisionID_Lbl" text="Division ID:" GridPane.rowIndex="5" />
                   <TextField fx:id="Division_ID" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                </children>
             </GridPane>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" text="Add" />
+                  <Button mnemonicParsing="false" onAction="#CreateCustomer" text="Add" />
                   <Button mnemonicParsing="false" onAction="#CustomerScreenButton" text="Back" />
                </children>
             </HBox>
