--- a/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
@@ -19,7 +19,7 @@
       <HBox alignment="CENTER" layoutX="300.0" layoutY="321.0" prefHeight="56.0" prefWidth="251.0" spacing="15.0">
          <children>
             <Button mnemonicParsing="false" onAction="#OnAddCustomer" text="ADD" />
-            <Button mnemonicParsing="false" text="UPDATE" />
+            <Button mnemonicParsing="false" onAction="#OnUpdateCustomer" text="UPDATE" />
             <Button mnemonicParsing="false" text="DELETE" />
             <Button mnemonicParsing="false" onAction="#MainMenuReturn" text="BACK" />
          </children>
