Added two new views Merge remote-tracking branch 'origin/master'
# Conflicts:
#	.idea/workspace.xml

--- a/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,6 +11,12 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.appointment.ApptController">
    <children>
+      <HBox alignment="CENTER" layoutX="334.0" layoutY="19.0" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <RadioButton mnemonicParsing="false" text="Month" />
+            <RadioButton mnemonicParsing="false" text="Week" />
+         </children>
+      </HBox>
       <TableView fx:id="AppointmentTable" layoutX="59.0" layoutY="100.0" prefHeight="200.0" prefWidth="749.0">
         <columns>
           <TableColumn fx:id="Appointment_ID" prefWidth="75.0" text="Appt. ID" />
