--- a/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.appointment.ApptController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.appointment.ApptController">
    <children>
       <HBox alignment="CENTER" layoutX="334.0" layoutY="19.0" prefHeight="100.0" prefWidth="200.0">
          <children>
@@ -31,7 +26,7 @@
       </TableView>
       <HBox alignment="CENTER" layoutX="298.0" layoutY="323.0" prefHeight="56.0" prefWidth="306.0" spacing="15.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#OnAddAppt" prefHeight="25.0" prefWidth="62.0" text="ADD" />
+            <Button fx:id="OnAddAppt" mnemonicParsing="false" onAction="#OnAddAppt" prefHeight="25.0" prefWidth="62.0" text="ADD" />
             <Button mnemonicParsing="false" onAction="#OnUpdateAppt" text="UPDATE" />
             <Button mnemonicParsing="false" onAction="#OnDeleteAppt" text="DELETE" />
             <Button layoutX="17.0" layoutY="26.0" mnemonicParsing="false" onAction="#MainMenuReturn" text="BACK" />
