--- a/src/main/resources/cordinus/cordinus_global/AddAppt.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AddAppt.fxml
@@ -10,10 +10,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane  maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.AddApptController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="747.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.AddApptController">
    <children>
-      <GridPane layoutX="89.0" layoutY="75.0" prefHeight="219.0" prefWidth="425.0" vgap="10.0">
+      <GridPane layoutX="170.0" layoutY="81.0" prefHeight="219.0" prefWidth="425.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -27,6 +26,8 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label prefHeight="17.0" prefWidth="114.0" text="Appointment ID" />
@@ -37,7 +38,7 @@
             <Label text="Type" GridPane.rowIndex="5" />
             <Label text="Start Time" GridPane.rowIndex="6" />
             <Label text="End Time" GridPane.rowIndex="7" />
-            <TextField fx:id="ApptIDTxt" GridPane.columnIndex="1" />
+            <TextField fx:id="ApptIDTxt" disable="true" GridPane.columnIndex="1" />
             <TextField fx:id="TitleTxt" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="DescriptionTxt" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="LocationTxt" GridPane.columnIndex="1" GridPane.rowIndex="3" />
@@ -45,9 +46,13 @@
             <TextField fx:id="TypeTxt" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <DatePicker fx:id="ApptStartPicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <DatePicker fx:id="ApptEndPicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Label text="Customer ID" GridPane.rowIndex="8" />
+            <Label text="User ID" GridPane.rowIndex="9" />
+            <TextField fx:id="CustomerIDTxt" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField fx:id="UserIDTxt" GridPane.columnIndex="1" GridPane.rowIndex="9" />
          </children>
       </GridPane>
-      <HBox alignment="CENTER" layoutX="170.0" layoutY="300.0" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+      <HBox alignment="CENTER" layoutX="283.0" layoutY="349.0" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
          <children>
             <Button mnemonicParsing="false" onAction="#InsertAppt" text="Add" />
             <Button mnemonicParsing="false" onAction="#ApptScreenReturn" text="Back" />
