--- a/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
@@ -4,24 +4,26 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.appointment.ApptController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="493.0" prefWidth="941.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.appointment.ApptController">
    <children>
-      <HBox alignment="CENTER" layoutX="334.0" layoutY="19.0" prefHeight="100.0" prefWidth="200.0">
+      <HBox alignment="CENTER" layoutX="334.0" layoutY="32.0" prefHeight="100.0" prefWidth="200.0">
          <children>
             <RadioButton mnemonicParsing="false" text="Month" />
             <RadioButton mnemonicParsing="false" text="Week" />
          </children>
       </HBox>
-      <TableView fx:id="AppointmentTable" layoutX="59.0" layoutY="100.0" prefHeight="200.0" prefWidth="749.0">
+      <TableView fx:id="AppointmentTable" layoutX="10.0" layoutY="100.0" prefHeight="200.0" prefWidth="922.0">
         <columns>
           <TableColumn fx:id="Appointment_ID" prefWidth="75.0" text="Appt. ID" />
           <TableColumn fx:id="Title" prefWidth="75.0" text="Title" />
             <TableColumn fx:id="Description" prefWidth="75.0" text="Description" />
             <TableColumn fx:id="Location" prefWidth="75.0" text="Location" />
-            <TableColumn fx:id="Contact_ID" prefWidth="75.0" text="Contact" />
             <TableColumn fx:id="Type" prefWidth="113.0" text="Type" />
             <TableColumn fx:id="Start" minWidth="8.0" prefWidth="128.0" text="Start" />
             <TableColumn fx:id="End" prefWidth="132.0" text="End" />
+            <TableColumn fx:id="Contact_ID" prefWidth="75.0" text="Contact ID" />
+            <TableColumn fx:id="Customer_ID" prefWidth="86.0" text="Cust. ID" />
+            <TableColumn fx:id="User_ID" prefWidth="86.0" text="User ID" />
         </columns>
       </TableView>
       <HBox alignment="CENTER" layoutX="298.0" layoutY="323.0" prefHeight="56.0" prefWidth="306.0" spacing="15.0">
