--- a/src/main/resources/cordinus/cordinus_global/AddAppt.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AddAppt.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -16,6 +17,7 @@
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -44,12 +46,14 @@
             <TextField fx:id="LocationTxt" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="ContactTxt" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="TypeTxt" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <DatePicker fx:id="ApptStartPicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <DatePicker fx:id="ApptEndPicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <DatePicker fx:id="StartDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <DatePicker fx:id="EndDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
             <Label text="Customer ID" GridPane.rowIndex="8" />
             <Label text="User ID" GridPane.rowIndex="9" />
             <TextField fx:id="CustomerIDTxt" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             <TextField fx:id="UserIDTxt" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <ComboBox fx:id="StartTimeCombo" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <ComboBox fx:id="EndTimeCombo" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
          </children>
       </GridPane>
       <HBox alignment="CENTER" layoutX="283.0" layoutY="349.0" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
