--- a/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.customer.CustomerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.customer.CustomerController">
    <children>
-      <TableView fx:id="CustomerTable" layoutX="143.0" layoutY="100.0" prefHeight="200.0" prefWidth="615.0">
+      <TableView fx:id="CustomerTable" layoutX="68.0" layoutY="100.0" prefHeight="200.0" prefWidth="716.0">
         <columns>
             <TableColumn fx:id="Customer_ID" minWidth="75.0" prefWidth="75.0" text="ID" />
           <TableColumn fx:id="Customer_Name" minWidth="100.0" prefWidth="75.0" text="Name" />
@@ -14,6 +18,7 @@
             <TableColumn fx:id="Postal_Code" minWidth="82.0" prefWidth="82.0" text="Postal Code" />
             <TableColumn fx:id="Phone" minWidth="75.0" prefWidth="133.0" text="Phone" />
             <TableColumn fx:id="Division_ID" minWidth="75.0" prefWidth="99.0" text="Division_ID" />
+            <TableColumn fx:id="Countries" minWidth="75.0" prefWidth="99.0" text="Countries" />
         </columns>
       </TableView>
       <HBox alignment="CENTER" layoutX="300.0" layoutY="321.0" prefHeight="56.0" prefWidth="251.0" spacing="15.0">
