--- a/src/main/resources/cordinus/cordinus_global/ModAppt.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ModAppt.fxml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<AnchorPane fx:id="UpdateAppt" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="747.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ModifyApptController">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
+<AnchorPane fx:id="UpdateAppt" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="747.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ModifyApptController">
     <children>
         <GridPane layoutX="170.0" layoutY="81.0" prefHeight="219.0" prefWidth="425.0" vgap="10.0">
 
@@ -46,8 +39,8 @@
             <TextField fx:id="LocationTxt" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="ContactTxt" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="TypeTxt" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <DatePicker fx:id="StartDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <DatePicker fx:id="EndDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <DatePicker fx:id="ApptStartPicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <DatePicker fx:id="ApptEndPicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
             <Label text="Customer ID" GridPane.rowIndex="8" />
             <Label text="User ID" GridPane.rowIndex="9" />
             <TextField fx:id="CustomerIDTxt" GridPane.columnIndex="1" GridPane.rowIndex="8" />
