--- a/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.customer.CustomerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.customer.CustomerController">
    <children>
       <TableView fx:id="CustomerTable" layoutX="68.0" layoutY="100.0" prefHeight="200.0" prefWidth="716.0">
         <columns>
@@ -25,7 +21,7 @@
          <children>
             <Button mnemonicParsing="false" onAction="#OnAddCustomer" text="ADD" />
             <Button mnemonicParsing="false" onAction="#OnUpdateCustomer" text="UPDATE" />
-            <Button mnemonicParsing="false" text="DELETE" />
+            <Button mnemonicParsing="false" onAction="#OnDeleteCustomer" text="DELETE" />
             <Button mnemonicParsing="false" onAction="#MainMenuReturn" text="BACK" />
          </children>
       </HBox>
