--- a/src/main/resources/cordinus/cordinus_global/LoginForm.fxml
+++ b/src/main/resources/cordinus/cordinus_global/LoginForm.fxml
@@ -10,9 +10,9 @@
             <VBox alignment="CENTER" layoutX="125.0" layoutY="-1.0" prefHeight="357.0" prefWidth="301.0" spacing="15.0">
                <children>
                   <Label alignment="CENTER" prefHeight="17.0" prefWidth="304.0" text="Username:" />
-                  <TextField />
+                  <TextField fx:id="UsernameTxt" />
                   <Label text="Password:" />
-                  <TextField />
+                  <TextField fx:id="PasswordTxt" />
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <Label text="Language:" />
