--- a/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
@@ -43,6 +43,6 @@
             <Font name="Garamond" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="ApptIntervalLbl" layoutX="395.0" layoutY="424.0" prefHeight="17.0" prefWidth="279.0" text="Label" />
+      <Label fx:id="ApptIntervalLbl" layoutX="378.0" layoutY="386.0" prefHeight="17.0" prefWidth="279.0" text="Appointment Interval Check" />
    </children>
 </AnchorPane>
