--- a/src/main/resources/cordinus/cordinus_global/ModAppt.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ModAppt.fxml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="UpdateAppt" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="747.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ModifyApptController">
+<AnchorPane fx:id="UpdateAppt" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="747.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ModifyApptController">
     <children>
         <GridPane layoutX="170.0" layoutY="81.0" prefHeight="219.0" prefWidth="425.0" vgap="10.0">
 
@@ -14,37 +22,37 @@
         </columnConstraints>
         <rowConstraints>
             <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="69.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="43.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label prefHeight="17.0" prefWidth="114.0" text="Appointment ID" />
-            <Label text="Title" GridPane.rowIndex="1" />
-            <Label text="Description" GridPane.rowIndex="2" />
-            <Label text="Location" GridPane.rowIndex="3" />
-            <Label text="Contact" GridPane.rowIndex="4" />
-            <Label text="Type" GridPane.rowIndex="5" />
+            <Label text="Title" GridPane.rowIndex="3" />
+            <Label text="Description" GridPane.rowIndex="4" />
+            <Label text="Location" GridPane.rowIndex="5" />
+            <Label text="Contact" GridPane.rowIndex="8" />
+            <Label text="Type" GridPane.rowIndex="9" />
             <Label text="Start Time" GridPane.rowIndex="6" />
             <Label text="End Time" GridPane.rowIndex="7" />
             <TextField fx:id="ApptIDTxt" disable="true" GridPane.columnIndex="1" />
-            <TextField fx:id="TitleTxt" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="DescriptionTxt" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="LocationTxt" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="ContactTxt" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField fx:id="TypeTxt" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="TitleTxt" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="DescriptionTxt" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="LocationTxt" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="ContactTxt" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField fx:id="TypeTxt" GridPane.columnIndex="1" GridPane.rowIndex="9" />
             <DatePicker fx:id="ApptStartPicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <DatePicker fx:id="ApptEndPicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <Label text="Customer ID" GridPane.rowIndex="8" />
-            <Label text="User ID" GridPane.rowIndex="9" />
-            <TextField fx:id="CustomerIDTxt" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-            <TextField fx:id="UserIDTxt" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <Label text="Customer ID" GridPane.rowIndex="2" />
+            <Label text="User ID" GridPane.rowIndex="1" />
+            <TextField fx:id="CustomerIDTxt" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="UserIDTxt" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="StartTimeCombo" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
             <ComboBox fx:id="EndTimeCombo" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
          </children>
