--- a/src/main/resources/cordinus/cordinus_global/ModCust.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ModCust.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -26,6 +27,8 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label text="Customer Name:" />
@@ -40,6 +43,10 @@
                   <TextField fx:id="Customer_ID" disable="true" editable="false" layoutX="277.0" layoutY="103.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                   <Label text="Division ID:" GridPane.rowIndex="5" />
                   <TextField fx:id="Division_ID" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Label text="Country:" GridPane.rowIndex="6" />
+                  <Label text="State/Province" GridPane.rowIndex="7" />
+                  <ComboBox fx:id="CountryComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <ComboBox fx:id="StateComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                </children>
             </GridPane>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
