--- a/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-width: 3px;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.customer.CustomerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-width: 3px;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.CustomerController">
    <children>
       <TableView fx:id="CustomerTable" layoutX="68.0" layoutY="100.0" prefHeight="200.0" prefWidth="716.0">
         <columns>
