--- a/src/main/resources/cordinus/cordinus_global/hello-view.fxml
+++ b/src/main/resources/cordinus/cordinus_global/hello-view.fxml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #C4A484; -fx-background-image: url(&quot;C:\Users\Hoshi Holiday\Pictures\Saved Pictures\Globe.png&quot;);" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #C4A484;" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.MainController">
    <children>
+      <ImageView fx:id="GlobeImgView" fitHeight="161.0" fitWidth="244.0" layoutX="221.0" layoutY="120.0" pickOnBounds="true" preserveRatio="true" style="-fx-translate-z: 1;">
+         <image>
+            <Image url="@../../../java/cordinus/cordinus_global/image/CordinusGlobe.jpg" />
+         </image>
+      </ImageView>
       <Button blendMode="SRC_ATOP" layoutX="229.0" layoutY="319.0" mnemonicParsing="false" onAction="#LoginScreenButton" prefHeight="25.0" prefWidth="134.0" scaleX="1.25" scaleY="1.25" style="-fx-border-radius: 20px; -fx-background-radius: 15px; -fx-background-color: #B88A44; -fx-text-fill: white; -fx-translate-z: 2;" text="Proceed to Login" />
       <Label contentDisplay="CENTER" layoutX="201.0" layoutY="44.0" prefHeight="75.0" prefWidth="213.0" text="Cordinus Global">
          <font>
