--- a/src/main/resources/cordinus/cordinus_global/AddAppt.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AddAppt.fxml
@@ -44,7 +44,7 @@
             <TextField fx:id="TitleTxt" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="DescriptionTxt" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="LocationTxt" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="ContactTxt" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField fx:id="ContactTxt" onAction="#ContactUpdate" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             <TextField fx:id="TypeTxt" GridPane.columnIndex="1" GridPane.rowIndex="9" />
             <DatePicker fx:id="StartDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <DatePicker fx:id="EndDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
