--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -1,14 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cordinus.cordinus_global.ReportScreen"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="581.0" prefWidth="1039.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-width: 2px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ReportController">
+   <children>
+      <TabPane layoutX="21.0" layoutY="16.0" prefHeight="477.0" prefWidth="997.0" style="-fx-background-color: #000;" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Appt Total(s)">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+          <Tab text="Contact Schedule">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #000;">
+                     <children>
+                        <TableView fx:id="AppointmentTable" layoutX="106.0" layoutY="35.0" prefHeight="355.0" prefWidth="758.0" style="-fx-background-color: #313639;">
+                           <columns>
+                              <TableColumn fx:id="Appointment_ID" prefWidth="75.0" text="Appt. ID" />
+                              <TableColumn fx:id="Title" prefWidth="75.0" text="Title" />
+                              <TableColumn fx:id="Description" prefWidth="75.0" text="Description" />
+                              <TableColumn fx:id="Location" prefWidth="75.0" text="Location" />
+                              <TableColumn fx:id="Type" prefWidth="113.0" text="Type" />
+                              <TableColumn fx:id="Start" minWidth="8.0" prefWidth="128.0" text="Start" />
+                              <TableColumn fx:id="End" prefWidth="132.0" text="End" />
+                              <TableColumn fx:id="Customer_ID" prefWidth="86.0" text="Cust. ID" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+            <Tab text="Remaining Appointments">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               </content>
+            </Tab>
+        </tabs>
+      </TabPane>
+   </children>
 </AnchorPane>
