--- a/src/main/resources/cordinus/cordinus_global/AddAppt.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AddAppt.fxml
@@ -44,7 +44,7 @@
             <TextField fx:id="TitleTxt" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="DescriptionTxt" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="LocationTxt" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="ContactTxt" onAction="#ContactUpdate" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField fx:id="ContactTxt" disable="true" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             <TextField fx:id="TypeTxt" GridPane.columnIndex="1" GridPane.rowIndex="9" />
             <DatePicker fx:id="StartDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <DatePicker fx:id="EndDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
@@ -54,7 +54,7 @@
             <TextField fx:id="UserIDTxt" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="StartTimeCombo" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
             <ComboBox fx:id="EndTimeCombo" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-            <ComboBox fx:id="ContactComboBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+            <ComboBox fx:id="ContactComboBox" onAction="#ContactUpdate" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="8" />
          </children>
       </GridPane>
       <HBox alignment="CENTER" layoutX="283.0" layoutY="349.0" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
