--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -34,8 +33,7 @@
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
                                  <children>
-                                    <ChoiceBox layoutX="35.0" layoutY="40.0" prefWidth="150.0" />
-                                    <ComboBox layoutX="35.0" layoutY="259.0" prefWidth="150.0" />
+                                    <ComboBox fx:id="TypeComboBox" layoutX="35.0" layoutY="259.0" prefWidth="150.0" />
                                     <TextField disable="true" layoutX="36.0" layoutY="389.0" />
                                     <Label layoutX="35.0" layoutY="7.0" prefHeight="17.0" prefWidth="149.0" text="Months:" textAlignment="CENTER" textFill="WHITE">
                                        <font>
@@ -52,17 +50,18 @@
                                           <Font name="System Bold Italic" size="18.0" />
                                        </font>
                                     </Label>
+                                    <ComboBox fx:id="MonthComboBox" layoutX="35.0" layoutY="54.0" prefWidth="150.0" />
                                  </children>
                               </AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
                                  <children>
-                                    <TableView layoutX="62.0" layoutY="50.0" prefHeight="368.0" prefWidth="646.0">
+                                    <TableView fx:id="reportTotalsTable" layoutX="62.0" layoutY="50.0" prefHeight="368.0" prefWidth="646.0">
                                       <columns>
-                                        <TableColumn prefWidth="133.0" text="C1" />
-                                        <TableColumn prefWidth="127.0" text="C2" />
-                                          <TableColumn prefWidth="125.0" text="C2" />
-                                          <TableColumn prefWidth="147.0" text="C2" />
-                                          <TableColumn prefWidth="113.0" text="C2" />
+                                        <TableColumn fx:id="Appointment_ID" prefWidth="133.0" text="Appointment_ID" />
+                                        <TableColumn fx:id="Appointment_Type" prefWidth="127.0" text="Appointment_Type" />
+                                          <TableColumn fx:id="Description" prefWidth="125.0" text="Description" />
+                                          <TableColumn fx:id="Customer_ID" prefWidth="113.0" text="CustomerID" />
+                                          <TableColumn fx:id="Customer_Name" prefWidth="147.0" text="Customer_Name" />
                                       </columns>
                                     </TableView>
                                  </children>
@@ -80,7 +79,7 @@
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
                                  <children>
-                                    <ComboBox layoutX="11.0" layoutY="33.0" prefWidth="150.0" />
+                                    <ComboBox fx:id="ContactComboBox" layoutX="11.0" layoutY="33.0" prefWidth="150.0" />
                                     <Label layoutX="45.0" layoutY="6.0" text="Select Contact " textFill="WHITE">
                                        <font>
                                           <Font name="System Bold Italic" size="12.0" />
@@ -91,7 +90,7 @@
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;" />
                           </items>
                         </SplitPane>
-                        <TableView fx:id="AppointmentTable" layoutX="208.0" layoutY="29.0" prefHeight="382.0" prefWidth="758.0" style="-fx-background-color: #313639;">
+                        <TableView fx:id="reportContactsTable" layoutX="208.0" layoutY="29.0" prefHeight="382.0" prefWidth="758.0" style="-fx-background-color: #313639;">
                            <columns>
                               <TableColumn fx:id="Appointment_ID" prefWidth="75.0" text="Appt. ID" />
                               <TableColumn fx:id="Title" prefWidth="75.0" text="Title" />
