--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -27,13 +28,13 @@
         <tabs>
           <Tab text="Appt Total(s)">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="506.0" prefWidth="998.0">
                      <children>
-                        <SplitPane dividerPositions="0.22311557788944725" layoutX="2.0" layoutY="-1.0" prefHeight="451.0" prefWidth="997.0">
+                        <SplitPane dividerPositions="0.22311557788944725" layoutX="2.0" layoutY="-1.0" prefHeight="447.0" prefWidth="997.0">
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
                                  <children>
-                                    <ComboBox fx:id="TypeComboBox" layoutX="35.0" layoutY="259.0" prefWidth="150.0" />
+                                    <ComboBox fx:id="TypeComboBox" layoutX="35.0" layoutY="259.0" onAction="#typeFilter" prefWidth="150.0" />
                                     <TextField fx:id="apptTotals" disable="true" layoutX="36.0" layoutY="389.0" />
                                     <Label layoutX="35.0" layoutY="7.0" prefHeight="17.0" prefWidth="149.0" text="Months:" textAlignment="CENTER" textFill="WHITE">
                                        <font>
@@ -53,7 +54,7 @@
                                     <ComboBox fx:id="MonthComboBox" layoutX="35.0" layoutY="54.0" prefWidth="150.0" />
                                  </children>
                               </AnchorPane>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="442.0" prefWidth="770.0" style="-fx-background-color: #000;">
                                  <children>
                                     <TableView fx:id="reportTotalsTable" layoutX="62.0" layoutY="50.0" prefHeight="368.0" prefWidth="646.0">
                                       <columns>
@@ -167,5 +168,6 @@
             </Tab>
         </tabs>
       </TabPane>
+      <Button layoutX="783.0" layoutY="507.0" mnemonicParsing="false" onAction="#MainMenuReturn" prefHeight="52.0" prefWidth="232.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-radius: 5px;" text="Back to Main Menu" />
    </children>
 </AnchorPane>
