--- a/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
@@ -19,10 +19,10 @@
       </TableView>
       <HBox alignment="CENTER" layoutX="68.0" layoutY="322.0" prefHeight="56.0" prefWidth="398.0" spacing="15.0" style="-fx-background-color: #572C02; -fx-border-color: #000; -fx-border-width: 5px;">
          <children>
-            <Button mnemonicParsing="false" onAction="#OnAddCustomer" text="ADD CUSTOMER" />
-            <Button mnemonicParsing="false" onAction="#OnUpdateCustomer" text="UPDATE CUSTOMER" />
-            <Button mnemonicParsing="false" onAction="#OnDeleteCustomer" text="DELETE" />
-            <Button mnemonicParsing="false" onAction="#MainMenuReturn" text="BACK" />
+            <Button mnemonicParsing="false" onAction="#onAddCustomer" text="ADD CUSTOMER" />
+            <Button mnemonicParsing="false" onAction="#onUpdateCustomer" text="UPDATE CUSTOMER" />
+            <Button mnemonicParsing="false" onAction="#onDeleteCustomer" text="DELETE" />
+            <Button mnemonicParsing="false" onAction="#mainMenuReturn" text="BACK" />
          </children>
       </HBox>
       <Label alignment="CENTER" layoutX="315.0" layoutY="13.0" prefHeight="56.0" prefWidth="251.0" text="CUSTOMERS">
@@ -32,8 +32,8 @@
       </Label>
       <HBox alignment="CENTER" layoutX="464.0" layoutY="322.0" prefHeight="56.0" prefWidth="324.0" spacing="10.0" style="-fx-border-color: #000; -fx-background-color: #2F1801; -fx-border-width: 5px;">
          <children>
-            <Button mnemonicParsing="false" onAction="#AddAppointment" prefHeight="25.0" prefWidth="132.0" text="ADD APPOINTMENT " />
-            <Button mnemonicParsing="false" onAction="#UpdateAppointment" text="UPDATE APPOINTMENT" />
+            <Button mnemonicParsing="false" onAction="#addAppointment" prefHeight="25.0" prefWidth="132.0" text="ADD APPOINTMENT " />
+            <Button mnemonicParsing="false" onAction="#updateAppointment" text="UPDATE APPOINTMENT" />
          </children>
       </HBox>
    </children>
