--- a/src/main/resources/cordinus/cordinus_global/ModCust.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ModCust.fxml
@@ -42,17 +42,17 @@
                   <TextField fx:id="Phone" layoutX="277.0" layoutY="73.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <TextField fx:id="Customer_ID" disable="true" editable="false" layoutX="277.0" layoutY="103.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                   <Label text="Division ID:" GridPane.rowIndex="5" />
-                  <TextField fx:id="Division_ID" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <TextField fx:id="Division_ID" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                   <Label text="Country:" GridPane.rowIndex="6" />
                   <Label text="State/Province" GridPane.rowIndex="7" />
                   <ComboBox fx:id="CountriesComboBox" onAction="#OnActionSelectCountry" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <ComboBox fx:id="StatesComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <ComboBox fx:id="StatesComboBox" onAction="#statesSelect" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                </children>
             </GridPane>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#ModifyCustomer" text="Modify" />
-                  <Button mnemonicParsing="false" onAction="#CustomerScreenButton" text="Back" />
+                  <Button mnemonicParsing="false" onAction="#modifyCustomer" text="Modify" />
+                  <Button mnemonicParsing="false" onAction="#customerScreenButton" text="Back" />
                </children>
             </HBox>
          </children>
