--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -73,12 +72,12 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="510.0" prefWidth="997.0" style="-fx-background-color: #000;">
                      <children>
-                        <SplitPane dividerPositions="0.18592964824120603" prefHeight="450.0" prefWidth="997.0">
+                        <SplitPane dividerPositions="0.13165829145728644" prefHeight="450.0" prefWidth="997.0">
                           <items>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="448.0" prefWidth="134.0" style="-fx-background-color: #000;">
                                  <children>
-                                    <ComboBox fx:id="ContactComboBox" layoutX="11.0" layoutY="33.0" prefWidth="150.0" />
-                                    <Label layoutX="45.0" layoutY="6.0" text="Select Contact " textFill="WHITE">
+                                    <ComboBox fx:id="ContactComboBox" layoutX="8.0" layoutY="33.0" prefHeight="25.0" prefWidth="111.0" />
+                                    <Label layoutX="8.0" layoutY="6.0" text="Select Contact " textFill="WHITE">
                                        <font>
                                           <Font name="System Bold Italic" size="12.0" />
                                        </font>
@@ -88,7 +87,7 @@
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;" />
                           </items>
                         </SplitPane>
-                        <TableView fx:id="reportContactsTable" layoutX="208.0" layoutY="29.0" prefHeight="382.0" prefWidth="758.0" style="-fx-background-color: #313639;">
+                        <TableView fx:id="reportContactsTable" layoutX="163.0" layoutY="29.0" prefHeight="382.0" prefWidth="803.0" style="-fx-background-color: #313639;">
                            <columns>
                               <TableColumn fx:id="Appointment_ID" prefWidth="75.0" text="Appt. ID" />
                               <TableColumn fx:id="Title" prefWidth="75.0" text="Title" />
@@ -112,7 +111,6 @@
                               <RadioButton fx:id="AgendaRB" mnemonicParsing="false" onAction="#OnRadioButton" prefHeight="17.0" prefWidth="106.0" text="Full Agenda" textFill="WHITE" toggleGroup="$ApptRB" />
                            </children>
                         </HBox>
-                        <Separator layoutX="184.0" layoutY="1.0" orientation="VERTICAL" prefHeight="446.0" prefWidth="0.0" />
                      </children>
                   </AnchorPane>
             </content>
